--- a/src/App/App.css
+++ b/src/App/App.css
@@ -29,6 +29,7 @@ button:hover {
 }
 .btn {
   width: 100px;
+  text-align: right;
 }
 form {
   text-align: center;
@@ -36,4 +37,7 @@ form {
 h1 {
   text-align: center;
   background: #87f5b8;
+}
+p {
+  word-break: break-all;
 }
