--- a/src/App/App.css
+++ b/src/App/App.css
@@ -1,19 +1,7 @@
-.task {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  gap: 20px;
-  padding: 5px 75px;
-  background: #c9fac7;
-  overflow: hidden;
-}
-.container {
-  background: #c9fac7;
-  max-width: 400px;
-  margin: 0 auto;
-}
 
-input {
+
+
+/* input {
   padding: 5px;
 }
 span {
@@ -27,10 +15,7 @@ button:hover {
   padding: 5px;
   background: #87f5b8;
 }
-.btn {
-  width: 100px;
-  text-align: right;
-}
+
 form {
   text-align: center;
 }
@@ -40,4 +25,4 @@ h1 {
 }
 p {
   word-break: break-all;
-}
+} */
