--- a/src/components/todos/todos.css
+++ b/src/components/todos/todos.css
@@ -11,6 +11,8 @@
 .taskField{
     max-width: 20rem;
     background: #979595;
+    margin: 0 auto;
+    border-radius: 5px;
     & input{
         width: 70%;
         border: none;
@@ -20,5 +22,6 @@
         width: 25%;
         padding: .5rem;
         border:none ;
+
     }
 }
