--- a/src/components/todos/todos.css
+++ b/src/components/todos/todos.css
@@ -22,6 +22,12 @@
         width: 25%;
         padding: .5rem;
         border:none ;
-
+        background: #72b1ef;
+        
+    }
+    & button:hover{
+        background: #0d84fa;
+        color: #fff;
+        cursor: pointer;
     }
 }
