--- a/src/components/todos/todos.css
+++ b/src/components/todos/todos.css
@@ -6,28 +6,30 @@
     padding: 1rem;
     & fieldset{
         border-radius: 5px;
-    }
-}
-.taskField{
-    max-width: 20rem;
-    background: #979595;
-    margin: 0 auto;
-    border-radius: 5px;
-    & input{
-        width: 70%;
-        border: none;
-        padding: .5rem;
-    }
-    & button{
-        width: 25%;
-        padding: .5rem;
-        border:none ;
-        background: #72b1ef;
-        
-    }
-    & button:hover{
-        background: #0d84fa;
-        color: #fff;
-        cursor: pointer;
+        display: flex;
+        justify-content: center;
+        & .taskField{
+            width: max-content;
+            background: #f7f6f6;
+            border-radius: 0px 5px 0px 5px;
+            & input{
+                background: transparent;
+                border: none;
+                padding: .5rem;
+                outline: none;
+            }
+            & button{
+                padding: .5rem;
+                border:none ;
+                background: #72b1ef;
+                border-radius: 0px 5px 0px 5px;
+                
+            }
+            & button:hover{
+                background: #0d84fa;
+                color: #fff;
+                cursor: pointer;
+            }
+        }
     }
 }
